MP-3079 Icons alignments fixes

--- a/ui.frontend/src/main/webpack/components/content/core-card/v1/card/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-card/v1/card/style.scss
@@ -1,18 +1,28 @@
 @import '../../../../../prerequisite/core-base/styles/includes/bootstrap-mixins.scss';
 @import '../../../../../prerequisite/core-base/styles/includes/lego-typography.scss';
 
-/* Style overirde for font-awesome icon fixes */ 
+/* Style sl-cards width */ 
 .card {
-    .sl-link {
-        .svg-inline--fa {
-            width: 24px !important;
-            height: 24px !important;
-            margin-bottom: -5px;
-        }
-    }
     .content-container {
         .sl-cards & {
             width: 100%;
+        }
+    }
+}
+
+/* Style for horizontal card icon alignment */
+.sl-cards.horizontal, .sl-cards.vertical {
+    .sl-link, .sl-btn {
+        .fa-external-link {
+            margin: 0 0 0 8px;
+            vertical-align: -3px;
+        }
+        .fa-chevron-circle-right {
+            margin: 0 0 0 8px;
+            vertical-align: -2.7px;
+        }
+        .fa-file-pdf  {
+            margin: 0 8px 0 0;
         }
     }
 }
@@ -92,6 +102,20 @@
                 }
             }
         }
+
+        .sl-link {
+            .fa-external-link-alt {
+                margin: 0 0 0 8px;
+                vertical-align: -3px;
+            }
+            .fa-chevron-circle-right {
+                margin: 0 0 0 8px;
+                vertical-align: -2.7px;
+            }
+            .fa-file-pdf  {
+                margin: 0 8px 0 0;
+            }
+        }
     }
 
     @include media-breakpoint-only(sm) {
@@ -110,6 +134,22 @@
             .card-title {
                 font-size: 1.25rem;
             }
+
+            .avatar-link{
+                .sl-link{
+                    .fa-external-link-alt {
+                        margin: 0 0 0 8px;
+                        vertical-align: -3px;
+                    }
+                    .fa-chevron-circle-right {
+                        margin: 0 0 0 8px;
+                        vertical-align: -2.7px;
+                    }
+                    .fa-file-pdf  {
+                        margin: 0 8px 0 0;
+                    }
+                }
+            }
         }
         .body-quote {
             width: 100%;
@@ -125,6 +165,33 @@
     .card-text{
         padding-bottom: 0 !important;
     }
+    .sl-link {
+        .fa-external-link-alt {
+            margin: 0 0 0 8px;
+            vertical-align: -3px;
+        }
+        .fa-chevron-circle-right {
+            margin: 0 0 0 8px;
+            vertical-align: -2.7px;
+        }
+        .fa-file-pdf  {
+            margin: 0 8px 0 0;
+        }
+    }
+}
+
+.sl-media-block{
+    .sl-link, .sl-btn {
+        .fa-external-link {
+            margin: 0 0 0 8px;
+        }
+        .fa-chevron-circle-right {
+            margin: 0 0 0 8px;
+        }
+        .fa-file-pdf  {
+            margin: 0 8px 0 0;
+        }
+    }
 }
 
 .sl-media-block, 
@@ -133,17 +200,42 @@
         margin-bottom: 0;
     }
 }
+
+.sl-banner-content-block {
+    .caption-container {
+        .sl-link {
+            .fa-external-link-alt {
+                margin: 0 0 0 4px;
+                vertical-align: -3px;
+            }
+            .fa-chevron-circle-right {
+                margin: 0 0 0 8px;
+                vertical-align: -2.7px;
+            }
+            .fa-file-pdf  {
+                margin: 0 8px 0 0;
+            }
+        }
+    }
+}
+
 /* Style for banner-image content block */ 
 .sl-banner-image-block {
     &.banner-image-block-left,
     &.banner-image-block-right {
       .card-body {
         
-        .sl-link {
-            .svg-inline--fa {
-                width: 24px !important;
-                height: 24px !important;
-                margin-bottom: -4px;
+        .sl-link, .sl-btn {
+            .fa-external-link-alt {
+                margin: 0 0 0 8px;
+                vertical-align: -3px;
+            }
+            .fa-chevron-circle-right {
+                margin: 0 0 0 8px;
+                vertical-align: -2.7px;
+            }
+            .fa-file-pdf  {
+                margin: 0 8px 0 0;
             }
         }
         .card-text {
