--- a/ui.frontend/src/main/webpack/components/content/core-text/v1/text/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-text/v1/text/style.scss
@@ -44,25 +44,34 @@
 }
 
 .sl-link {
-    .fa-external-link,
-    .fa-chevron-circle-right,
-    .fa-file-pdf  {
-        margin-left: 4px;
-        height: 16px;
-        width: 16px;
-    }
+    &.sl-link-md {
+        .fa-external-link-alt {
+            margin: 0 0 0 8px;
+            vertical-align: -2px;
+        }
+        .fa-chevron-circle-right {
+            margin: 0 0 0 8px;
+        }
+        .fa-file-pdf  {
+            margin: 0 8px 0 0;
+        }
+    }   
 
 	.fa-file-pdf {
-	    margin-right: 4px;
-	    margin-left: 0px;
+	    margin-left: 0;
     }
 
     &.sl-link-sm {
-        .fa-external-link,
-        .fa-chevron-circle-right,
-        .fa-file-pdf {
-            height: 14px;
-            width: 14px;
+        .fa-external-link-alt {
+            height: 12px;
+            width: 12px;
+            margin: 0 0 0 7px;
+        }
+        .fa-chevron-circle-right {
+            margin: 0 0 0 7px;
+        }
+        .fa-file-pdf  {
+            margin: 0 7px 0 0;
         }
     }
   
@@ -72,11 +81,14 @@
     }
   
     &.sl-link-xs {
-        .fa-external-link,
-        .fa-chevron-circle-right, 
-        .fa-file-pdf {
+        .fa-external-link-alt,
+        .fa-chevron-circle-right {
             height: 12px;
             width: 12px;
+            margin-left: 4px;
+        }
+        .fa-file-pdf  {
+            margin-right: 4px;
         }
     }
 
